--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "element-ui": "^2.15.2",
     "vue": "^2.6.3"
   },
   "devDependencies": {
